--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@swl-sante/electron-wix-msi",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Creates an MSI installer for your Electron app",
   "license": "MIT",
-  "repository" : "https://github.com/swl-sante/electron-wix-msi",
+  "repository": "https://github.com/swl-sante/electron-wix-msi",
   "keywords": [
     "wix",
     "msi"
@@ -11,47 +11,41 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "install": "npm install",
     "prepublish": "npm run build",
     "build": "tsc --pretty",
     "test": "npm run lint && jest",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "harness:msi": "cd harness && ts-node harness.ts --platform win32 --dist user --ext msi"
+    "harness": "cd harness && ts-node all.ts"
   },
   "dependencies": {
     "debug": "^4.1.1",
     "fs-extra": "^8.1.0",
     "klaw": "^3.0.0",
     "lodash": "^4.17.15",
-    "uuid": "^3.4.0"
-  },
-  
-  "devDependencies": {
-    "argparse": "^1.0.10",
-    "electron-builder": "19.31.1",
+    "uuid": "^7.0.0",
     "electron-packager": "14.2.0",
+    "argparse": "^1.0.10"
+  },
+  "devDependencies": {
     "electron": "~1.7.14",
     "@types/argparse": "^1.0.38",
     "@types/debug": "4.1.5",
-    "@types/electron-builder": "^2.8.0",
     "@types/electron-packager": "^14.0.0",
     "@types/fs-extra": "^8.0.1",
     "@types/graceful-fs": "^4.1.3",
     "@types/jest": "^24.0.23",
     "@types/klaw": "^3.0.0",
-    "@types/lodash": "^4.14.147",
+    "@types/lodash": "^4.14.149",
     "@types/mock-fs": "^4.10.0",
-    "@types/node": "^13.5.0",
+    "@types/node": "^13.7.4",
     "@types/uuid": "^3.4.6",
     "coveralls": "^3.0.7",
-    "jest": "^20.0.4",
+    "jest": "^25.1.0",
     "jest-environment-node-debug": "^2.0.0",
     "mock-fs": "^4.10.3",
     "ts-jest": "^24.1.0",
-    "tslint": "^5.20.1",
-    "typescript": "latest",
-    "ts-node": "latest",
-    "nodemon": "latest"
+    "tslint": "^6.0.0",
+    "typescript": "3.8.2"
   },
   "engines": {
     "node": ">=12.0.0"
@@ -78,8 +72,8 @@
       "!src/interfaces.ts",
       "!src/index.ts"
     ]
-  }, 
+  },
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com/"
+    "registry": "https://npm.pkg.github.com/"
   }
 }
